# FIRBlaster

./: CMakeLists.txt  README.md  coefficientswidget.cpp  coefficientswidget.h  filterdesignwidget.cpp  filterdesignwidget.h  firgenerator.h  mainwindow.cpp  mainwindow.h  slider.cpp  slider.h
